updated meta for seo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,14 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Discover delicious recipes, cooking tips, and food inspiration. Create, share and explore culinary masterpieces from around the world."
+    />
+    <meta
+      name="keywords"
+      content="recipes, cooking, food, culinary, dishes, meals, kitchen, chef"
+    />
     <title>Foodies</title>
   </head>
   <body>
